Oh there is another gradle file too.